# sentinel

./: .env.example  .gitignore  README.md  SENTINEL_SKILL.md  Sentinel_PRD.docx  pyproject.toml
.claude/skills/sentinel/: SKILL.md
docs/plans/: 2026-03-10-sentinel-design.md  2026-03-10-sentinel-implementation.md
examples/: basic.py  claude_agent.py
sentinel/: __init__.py  cli.py  config.py
sentinel/api/: app.py
sentinel/api/routes/: audit.py  policies.py
sentinel/audit/: logger.py  store.py
sentinel/core/: engine.py  models.py  rules.py  semantic.py  wrapper.py
sentinel/integrations/: anthropic.py
tests/: test_api.py  test_audit_logger.py  test_audit_store.py  test_cli.py  test_e2e.py  test_integrations_anthropic.py  test_models.py  test_real_usage.py  test_rules.py  test_semantic.py  test_wrapper.py
