[project]
name = "sentinel"
version = "0.1.0"
description = "Agent Action Policy Engine"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.0.0",
    "aiosqlite>=0.20.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
langchain = ["langchain>=0.3.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
]

[project.scripts]
sentinel = "sentinel.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
